1. added vertical black line weekly calorie tracking 2. changes colors of lines in line graph 3. changes tool tips of line graphs days into complete day like from “Mon” to “Monday” 4. fixed vertical gaps of the tool tip view fxml for line graph

--- a/src/main/resources/org/tin/oop2_capstone/styles/application.css
+++ b/src/main/resources/org/tin/oop2_capstone/styles/application.css
@@ -326,6 +326,11 @@
     -fx-padding: 0;
 }
 
+.default-color0.chart-series-line { -fx-stroke: #2ECC71; }  /* calIn */
+.default-color1.chart-series-line { -fx-stroke: #FFB74D; }  /* calOut */
+
+.default-color0.chart-line-symbol { -fx-background-color: #2ECC71, white; -fx-background-radius: 5px; -fx-padding: 5px; }
+.default-color1.chart-line-symbol { -fx-background-color: #FFB74D, white; -fx-background-radius: 5px; -fx-padding: 5px; }
 
 
 
